# kangal

./: .gitignore  INSTALL.md  LICENSE  OVERHAUL_PLAN.md  README.md  package.json
backend/: requirements.txt  tools-registry.json
backend/app/: celery_app.py  db.py  diagnostics.py  installer.py  intel.py  main.py  models.py  onboard.py  orchestrator.py  patterns.py  ruflo.py  shell.py  threat_intel.py
backend/app/agents/: __init__.py  base.py  cloud.py  dns.py  exploit.py  http_probe.py  network.py  osint.py  pathscan.py  portscan.py  subdomain.py  tech.py  vuln.py
backend/app/services/: __init__.py  adapters.py  executor.py
backend/app/tools/: __init__.py
cli/: README.md  pyproject.toml
cli/kangal/: __init__.py  __main__.py  api.py  format.py  main.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AssetGraph.tsx  DiagnosticsModal.tsx  EngagementPanel.tsx  FindingsPanel.tsx  GraphDetailPanel.tsx  IntelSearch.tsx  LiveTerminal.tsx  Logo.tsx  MitreHeatmap.tsx  OnboardModal.tsx  PreShellPanel.tsx  RufloDetail.tsx  RufloStatus.tsx  ScanHistory.tsx  ShellPanel.tsx  StageProgress.tsx  TargetInput.tsx  ToolboxStatus.tsx  XTermTerminal.tsx
frontend/src/lib/: api.ts  biStream.ts  installStream.ts  store.ts  ws.ts
scripts/: dev.ps1  dev.sh  setup.ps1  setup.sh
tests/e2e/: kangal.spec.mjs  probe-sh.mjs  probe-tm.mjs  probe.mjs  probe2.mjs  probe3.mjs  probe4.mjs  probe5.mjs
tests/qa/: REPORT.md  lab.py  runner.py
(+9 files in other folders)
