[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kangal-cli"
version = "0.1.0"
description = "Kangal Dashboard CLI"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "httpx>=0.26",
  "rich>=13.0",
]

[project.scripts]
kangal = "kangal.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["kangal*"]